fix(components): fix text clipping for the song info component

--- a/src/renderer/src/components/song-info/SongInfo.module.scss
+++ b/src/renderer/src/components/song-info/SongInfo.module.scss
@@ -8,6 +8,7 @@
 .songInfo > * {
    text-align: left;
    text-overflow: ellipsis;
+   line-height: 1.3;
 
    white-space: nowrap;
 
